--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   },
   "devDependencies": {
     "chai": "^3.2.0",
+    "grunt": "^0.4.5",
+    "grunt-cafe-mocha": "^0.1.13",
+    "grunt-contrib-jshint": "^0.11.2",
     "mocha": "^2.2.5"
   }
 }
