--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "body-parser": "^1.13.2",
     "express": "^4.13.1",
-    "express-handlebars": "^2.0.1"
+    "express-handlebars": "^2.0.1",
+    "formidable": "^1.0.17"
   },
   "devDependencies": {
     "chai": "^3.2.0",
