--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.13.2",
+    "cookie-parser": "^1.3.5",
     "express": "^4.13.1",
     "express-handlebars": "^2.0.1",
+    "express-session": "^1.11.3",
     "formidable": "^1.0.17"
   },
   "devDependencies": {
