--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "cookie-parser": "^1.3.5",
     "express": "^4.13.1",
     "express-handlebars": "^2.0.1",
+    "express-logger": "0.0.3",
     "express-session": "^1.11.3",
-    "formidable": "^1.0.17"
+    "formidable": "^1.0.17",
+    "morgan": "^1.7.0"
   },
   "devDependencies": {
     "chai": "^3.2.0",
